--- a/Cargo.toml
+++ b/Cargo.toml
@@ -2,9 +2,9 @@
 name = "perlur"
 version = "0.1.0"
 edition = "2021"
-
-# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
+description = "Converts an image into one with a given palette either as beads or pixels"
 
 [dependencies]
+clap = {version = "4", features = ["derive"]}
 image = "0.25"
 lab = "0.11.0"
